5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1734_2496.log
== TEST (2019-05-14 18:22:05) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
print(y)	
-- ERROR:
File "XXXX", line 7
    print(y)	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:22:25) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
print(y)	
-- ERROR:
File "XXXX", line 7
    print(y)	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:22:49) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
print(y)	
-- ERROR:
File "XXXX", line 7
    print(y)	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:22:50) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
print(y)	
-- ERROR:
File "XXXX", line 7
    print(y)	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:22:50) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
print(y)	
-- ERROR:
File "XXXX", line 7
    print(y)	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:22:51) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
print(y)	
-- ERROR:
File "XXXX", line 7
    print(y)	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:22:51) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
print(y)	
-- ERROR:
File "XXXX", line 7
    print(y)	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:22:51) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
print(y)	
-- ERROR:
File "XXXX", line 7
    print(y)	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:22:51) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
print(y)	
-- ERROR:
File "XXXX", line 7
    print(y)	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:22:52) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
print(y)	
-- ERROR:
File "XXXX", line 7
    print(y)	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:23:04) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
			print(y)	
-- EXECUTION TIME:
0.14464
-- ERROR:
  File "/home/codebench/codes/1734/2496/main.py", line 7
    print(y)	
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:23:06) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
			print(y)	
-- ERROR:
File "XXXX", line 7
    print(y)	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:23:13) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
print(y)	
-- EXECUTION TIME:
0.182259
-- ERROR:
  File "/home/codebench/codes/1734/2496/main.py", line 7
    print(y)	
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:23:14) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
print(y)	
-- ERROR:
File "XXXX", line 7
    print(y)	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:23:31) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")

print(y)	
-- EXECUTION TIME:
0.192133
-- ERROR:
  File "/home/codebench/codes/1734/2496/main.py", line 8
    print(y)	
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:23:31) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")

print(y)	
-- ERROR:
File "XXXX", line 8
    print(y)	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:23:54) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
print(y)
-- ERROR:
File "XXXX", line 7
    print(y)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:23:57) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
print(y)
-- ERROR:
File "XXXX", line 7
    print(y)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:26:01) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
print(y)
-- ERROR:
File "XXXX", line 7
    print(y)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:26:48) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: ")
print(y)
-- ERROR:
File "XXXX", line 7
    print(y)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:29:35) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: "))
print(y)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:29:49) 
-- CODE:
x=int(input("digite um numero: "))
y=0

while (x!= -1):
	y=y+x
	x=int(input("digite um numero: "))
print(y)
-- EXECUTION TIME:
0.152491
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
